--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_dashboard">
 
     <fragment
         android:id="@+id/navigation_home"
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.sos_app_ui.ui.last_activity.LastActivityFragment"
-        android:label="@string/title_lastActivity"
-        tools:layout="@layout/fragment_last_activity" />
+        android:name="com.example.sos_app_ui.ui.current_activity.CurrentActivityFragment"
+        android:label="@string/title_currentActivity"
+        tools:layout="@layout/fragment_current_activity" />
 
-    `    <fragment
-    android:id="@+id/navigation_notifications"
-    android:name="com.example.sos_app_ui.ui.contacts.ContactsFragment"
-    android:label="@string/title_contacts"
-    tools:layout="@layout/fragment_contacts" />
+    <fragment
+        android:id="@+id/navigation_notifications"
+        android:name="com.example.sos_app_ui.ui.contacts.ContactsFragment"
+        android:label="@string/title_last_activity"
+        tools:layout="@layout/fragment_last_activity" />
 </navigation>
