read one gyroscope axis

--- a/app/src/main/res/layout/fragment_current_activity.xml
+++ b/app/src/main/res/layout/fragment_current_activity.xml
@@ -29,4 +29,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />
 
+    <TextView
+        android:id="@+id/gyroscopeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="number"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
