--- a/app/src/main/res/drawable/round_shape_btn.xml
+++ b/app/src/main/res/drawable/round_shape_btn.xml
@@ -3,9 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"   >
     <solid
-        android:color="#CF4A4A" >
+        android:color="#910d0d" >
     </solid>
     <corners
         android:radius="100dp"   >
     </corners>
+    <gradient
+        android:type="linear"
+        android:startColor="#db4646"
+        android:endColor="#9e0606"
+        android:gradientRadius="150dp"
+        />
 </shape>
