--- a/app/src/main/res/layout/fragment_last_activity.xml
+++ b/app/src/main/res/layout/fragment_last_activity.xml
@@ -2,6 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#1d1f29"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="120dp"
@@ -27,6 +28,9 @@
         android:layout_above="@id/btnLoad_AndroidContacts"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:choiceMode="singleChoice"/>
+        android:layout_marginStart="-2dp"
+        android:layout_marginTop="-6dp"
+        android:layout_marginBottom="6dp"
+        android:choiceMode="singleChoice" />
 
 </RelativeLayout>
