--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,20 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="AppTheme.RoundedCornerMaterialButton" parent="TextAppearance.AppCompat.Button">
         <item name="android:background">@drawable/round_shape_btn</item>
     </style>
+
+    <!--Style for Splash Screen-->
+
+<!--    <style name="AppTheme" parent="android:Theme">-->
+<!--        <item name="android:windowDisablePreview">true</item>-->
+<!--    </style>-->
 </resources>
