--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,4 +4,5 @@
     android:layout_height="200px"
     android:gravity="center"
     android:textStyle="bold"
+    android:textColor="@color/colorWhite"
     android:textSize="25dp"></TextView>
