--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="#E7E7E7"
-        android:endColor="#9B9B9B"
+        android:startColor="@color/colorPrimary"
+        android:endColor="@color/colorBlack"
+        android:dither="true"
         android:type="linear"/>
 </shape>
