--- a/app/src/main/res/drawable/round_shape_btn.xml
+++ b/app/src/main/res/drawable/round_shape_btn.xml
@@ -2,10 +2,12 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"   >
-    <solid
-        android:color="#CF4A4A" >
-    </solid>
+
+    <gradient
+        android:startColor="@color/gradientStart"
+        android:endColor="@color/gradientEnd"
+        android:angle="180" />
     <corners
-        android:radius="100dp"   >
+        android:radius="200dp"   >
     </corners>
 </shape>
