--- a/app/src/main/res/layout/activity_create_new_configuration.xml
+++ b/app/src/main/res/layout/activity_create_new_configuration.xml
@@ -4,16 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.configuration.MainConfigurationMenu"
-    tools:showIn="@layout/activity_main_configuration_menu">
+    tools:context=".ui.configuration.CreateNewConfiguration">
 
-    <ListView
-        android:id="@+id/MainConfList"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ListView
+            android:id="@+id/listView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
+
+        </ListView>
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
