--- a/app/src/main/res/layout/activity_create_new_configuration.xml
+++ b/app/src/main/res/layout/activity_create_new_configuration.xml
@@ -30,6 +30,7 @@
             <Button
                 android:id="@+id/submit"
                 android:layout_width="300dp"
+                android:background="@drawable/rounded_button"
                 android:layout_height="80dp"
                 android:text="Submit" />
         </LinearLayout>
