--- a/app/src/main/res/layout/content_message_panel.xml
+++ b/app/src/main/res/layout/content_message_panel.xml
@@ -36,6 +36,7 @@
             android:padding="15dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:textColor="@color/colorBlack"
             android:background="@drawable/rounded_edittext"
             android:gravity="top" />
 
