--- a/app/src/main/res/layout/content_personal_data_panel.xml
+++ b/app/src/main/res/layout/content_personal_data_panel.xml
@@ -6,16 +6,14 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.configuration.PersonalDataPanel"
+    android:background="@color/colorPrimaryDark"
     tools:showIn="@layout/activity_personal_data_panel">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-<<<<<<< HEAD
-        android:orientation="vertical"
-        android:background="@color/colorPrimaryDark">
-=======
+
         android:layout_margin="15dp"
         android:orientation="vertical"
         android:padding="10dp"
@@ -23,7 +21,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
->>>>>>> Configuration
 
         <TextView
             android:id="@+id/textView"
