--- a/app/src/main/res/layout/textfile_row.xml
+++ b/app/src/main/res/layout/textfile_row.xml
@@ -25,6 +25,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginLeft="5dp"
             android:textStyle="bold"
+            android:textColor="@color/colorBlack"
             android:text="TextView" />
 
         <TextView
@@ -34,6 +35,7 @@
             android:layout_marginLeft="15dp"
             android:textStyle="italic"
             android:layout_marginBottom="5dp"
+            android:textColor="@color/colorBlack"
             android:text="TextView" />
     </LinearLayout>
 
