--- a/app/src/main/res/layout/fragment_last_activity.xml
+++ b/app/src/main/res/layout/fragment_last_activity.xml
@@ -7,26 +7,14 @@
     android:layout_marginBottom="120dp"
     >
 
-<!--    <Button-->
-<!--        android:layout_width="157dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Load"-->
-<!--        android:id="@+id/btnLoad_AndroidContacts"-->
-<!--        android:onClick="btnLoad_AndroidContacts_onClick"-->
 
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_alignParentRight="true"-->
-<!--        android:layout_alignParentEnd="true"/>-->
+    <ListView
+        android:id="@+id/listView_Android_logs"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-
-<!--    <ListView-->
-<!--        android:id="@+id/listView_Android_Contacts"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-
-<!--        android:layout_above="@id/btnLoad_AndroidContacts"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        android:choiceMode="singleChoice"/>-->
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:choiceMode="singleChoice"/>
 
 </RelativeLayout>
