--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/title_currentActivity" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_logs"
         android:icon="@drawable/ic_notifications_white_24dp"
         android:title="@string/title_last_activity" />
 
