--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_current_activity" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.sos_app_ui.ui.contacts.ContactsFragment"
+        android:id="@+id/navigation_logs"
+        android:name="com.example.sos_app_ui.logs.LastActivityFragment"
         android:icon="@drawable/locaution_white"
         tools:layout="@layout/fragment_last_activity" />
 </navigation>
