--- a/app/src/main/res/layout/content_personal_data_panel.xml
+++ b/app/src/main/res/layout/content_personal_data_panel.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.configuration.PersonalDataPanel"
+    android:background="@color/colorPrimaryDark"
     tools:showIn="@layout/activity_personal_data_panel">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:layout_margin="15dp"
         android:orientation="vertical"
         android:padding="10dp"
@@ -37,6 +39,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edittext"
+                android:textColor="@color/colorBlack"
                 android:hint="Enter your first name..."
                 android:padding="5dip" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -59,6 +62,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edittext"
+                android:textColor="@color/colorBlack"
                 android:hint="Enter your second name..."
                 android:padding="5dip" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -82,6 +86,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edittext"
                 android:hint="Enter your age..."
+                android:textColor="@color/colorBlack"
                 android:padding="5dip" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edittext"
                 android:hint="Enter you email adress..."
+                android:textColor="@color/colorBlack"
                 android:padding="5dip" />
         </com.google.android.material.textfield.TextInputLayout>
 
