--- a/app/src/main/res/layout/content_warning_targets.xml
+++ b/app/src/main/res/layout/content_warning_targets.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.configuration.WarningTargets"
+    android:background="@color/colorPrimaryDark"
+
     tools:showIn="@layout/activity_warning_targets">
 
     <LinearLayout
@@ -58,11 +60,13 @@
                 android:layout_height="50dp"
                 android:padding="5dp"
                 android:text="Current list:"
+                android:textColor="@color/colorBlack"
                 android:textSize="25dp" />
 
             <ListView
                 android:id="@+id/listView1"
                 android:layout_width="match_parent"
+                android:textColor="@color/colorBlack"
                 android:padding="5dp"
                 android:layout_height="match_parent" />
         </LinearLayout>
